css: Fix double border between menu buttons

--- a/assets/static/common.css
+++ b/assets/static/common.css
@@ -115,6 +115,7 @@ span.button-row {
 }
 
 .menu input[type="submit"],
+.menu button,
 .menu .button {
     display: block;
     border-block-start-width: 0;
@@ -122,6 +123,7 @@ span.button-row {
 }
 
 .menu form:nth-child(1) input[type="submit"],
+.menu form:nth-child(1) button,
 .menu .button:nth-child(1) {
     border-block-start-width: 1px;
     border-start-start-radius: 0;
